--- a/asm/cluster-td/neg-controller-config.yaml
+++ b/asm/cluster-td/neg-controller-config.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   name: ingress-controller-asm-cm-config
   namespace: kube-system
 data:
