--- a/asm/cluster-td/neg-controller-default-backend.yaml
+++ b/asm/cluster-td/neg-controller-default-backend.yaml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   name: l7-default-backend
   namespace: kube-system
   labels:
@@ -43,6 +45,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   # This must match the --default-backend-service argument of the l7 lb
   # controller and is required because GCE mandates a default backend.
   name: default-http-backend
