--- a/asm/trafficdirector/td-configmap-injection.yaml
+++ b/asm/trafficdirector/td-configmap-injection.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   name: istio-sidecar-injector-td
   namespace: istio-system
   labels:
