--- a/asm/trafficdirector/td-istiod-asm-rbac.yaml
+++ b/asm/trafficdirector/td-istiod-asm-rbac.yaml
@@ -3,6 +3,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   name: asm-td-service-account
   namespace: istio-system
   labels:
@@ -14,6 +16,8 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   name: asm-td-istio-system
   labels:
     app: istiod
@@ -94,6 +98,8 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   name: asm-td-istio-system
   labels:
     app: pilot
