--- a/asm/trafficdirector/td-mutatingwebhook.yaml
+++ b/asm/trafficdirector/td-mutatingwebhook.yaml
@@ -1,6 +1,8 @@
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   name: asm-td
 webhooks:
   # name, service.name, and istio-env should be identical for consistency.
