--- a/project/project/neg-sa.yaml
+++ b/project/project/neg-sa.yaml
@@ -4,6 +4,8 @@ kind: IAMServiceAccount
 metadata:
   name: neg-service-account
   namespace: "[PROJECT_ID]"  # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
 spec:
   displayName: Service Account for NEG controller
   projectRoles:
