--- a/cluster/cluster/cluster.yaml
+++ b/cluster/cluster/cluster.yaml
@@ -3,7 +3,7 @@ apiVersion: container.cnrm.cloud.google.com/v1beta1
 kind: ContainerCluster
 metadata:
   annotations:
-    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
+    gke.io/cluster: "bootstrap://" # {"$ref":"#/definitions/io.k8s.cli.substitutions.bootstrap-cluster"}
   name: asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster"}
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
@@ -14,8 +14,8 @@ spec:
     mesh_id: "proj-[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.mesh-id"}
   loggingService: logging.googleapis.com/kubernetes
   monitoringService: monitoring.googleapis.com/kubernetes
-  ipAllocationPolicy:
-    useIpAliases: true
+  # ipAllocationPolicy:
+  #   useIpAliases: true
   addonsConfig:
     horizontalPodAutoscaling:
       disabled: false
@@ -26,7 +26,7 @@ spec:
   network: default
   networkPolicy:
     enabled: true
-  minMasterVersion: "1.15.11-gke.1"
+  minMasterVersion: "1.15.11-gke.13"
   nodeConfig:
     metadata:
       disable-legacy-endpoints: "true"
@@ -35,7 +35,7 @@ apiVersion: container.cnrm.cloud.google.com/v1beta1
 kind: ContainerNodePool
 metadata:
   annotations:
-    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
+    gke.io/cluster: "bootstrap://" # {"$ref":"#/definitions/io.k8s.cli.substitutions.bootstrap-cluster"}
   name: default-pool
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
