--- a/asm/trafficdirector/td-configmap-galley.yaml
+++ b/asm/trafficdirector/td-configmap-galley.yaml
@@ -8,6 +8,7 @@ metadata:
 data:
   TRAFFICDIRECTORADDRESS: "trafficdirector.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.endpoint.trafficdirector-address"}
   MESHCAADDRESS: "meshca.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.endpoint.meshca-address"}
+  CA_ADDR: "meshca.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.endpoint.meshca-address"}
   SINKADDRESS: "meshconfig.googleapis.com:443" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.serivcemesh.meshconfig-address"}
   SINKAUTHMODE: "GOOGLE" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.sink-auth-mode"}
   SDSPATH: "unix:/etc/istio/proxy/SDS"
@@ -16,6 +17,7 @@ data:
   AUDIENCE: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
   trustDomain: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
   TRUST_DOMAIN: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
+  GKE_CLUSTER_URL: https://container.googleapis.com/v1/projects/[PROJECT_ID]/locations/us-central1-c/clusters/asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
   gkeClusterUrl: https://container.googleapis.com/v1/projects/[PROJECT_ID]/locations/us-central1-c/clusters/asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cluster-url"}
   GCP_METADATA: "[PROJECT_ID]|[PROJECT_NUMBER]|asm-free-trial|us-central1-c" # { "$ref": "#/definitions/io.k8s.cli.substitutions.gcp-metadata" }
   ISTIO_META_MESH_ID: "proj-[PROJECT_NUMBER]" # { "$ref": "#/definitions/io.k8s.cli.substitutions.mesh-id" }
