--- a/asm/trafficdirector/td-configmap-galley.yaml
+++ b/asm/trafficdirector/td-configmap-galley.yaml
@@ -18,3 +18,5 @@ data:
   GCP_METADATA: "[PROJECT_ID]|[PROJECT_NUMBER]|asm-free-trial|us-central1-c" # { "$ref": "#/definitions/io.k8s.cli.substitutions.gcp-metadata" }
   ISTIO_META_MESH_ID: "proj-[PROJECT_NUMBER]" # { "$ref": "#/definitions/io.k8s.cli.substitutions.mesh-id" }
   ISTIO_META_TRAFFICDIRECTOR_GCP_PROJECT_NUMBER: "[PROJECT_NUMBER]" # { "$ref": "#/definitions/io.k8s.cli.substitutions.gcp-project-number" }
+  ENABLE_JWKS_TRANSFORMER: "true"
+  JWKS_TRANSFORMER_INTERVAL: "20m" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.jwks-transformer-interval"}
