--- a/cluster/cluster/cluster.yaml
+++ b/cluster/cluster/cluster.yaml
@@ -3,7 +3,7 @@ apiVersion: container.cnrm.cloud.google.com/v1beta1
 kind: ContainerCluster
 metadata:
   annotations:
-    gke.io/cluster: "bootstrap://" # {"$ref":"#/definitions/io.k8s.cli.substitutions.bootstrap-cluster"}
+    gke.io/cluster: "bootstrap://"
   name: asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster"}
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
@@ -35,7 +35,7 @@ apiVersion: container.cnrm.cloud.google.com/v1beta1
 kind: ContainerNodePool
 metadata:
   annotations:
-    gke.io/cluster: "bootstrap://" # {"$ref":"#/definitions/io.k8s.cli.substitutions.bootstrap-cluster"}
+    gke.io/cluster: "bootstrap://"
   name: default-pool
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
