Updating ASM Managed Control Plane branch to support anthoscli beta (#60)
* Initial commit of ASM Networking configuration

* Some small cleanup

* Adding additional role to p4sa

* Making node autoscaling more reasonable

* Fixing kptfile error

* Fixing error in postinstall script

* Temporarily disable workload identity

* Template fix and adding Trace ID as a setter

* Trying to fix ProjectNumber

* Trace ID must be valid int64

* Updating image, change meshconfig setter name

* Removing unused components

* Removing deprecated calls, more cleanup

* Small fix to postinstall script

* Switching CLUSTER_ZONE for LOCATION

* Script fixes

* Updating image version and resources for istiod

* Removing kustomize resources (no longer valid)

* Bumping up resource (test)

* Adding useIpAliases back

* add more customizations and fix typo

* make api and container endpoint configurable in infrastructure_config.sh

* Adding support for installing on existing clusters

* Enable JWKS transformation flag in galley

* restore del

* Updating deployment to use apps/v1

* Updating kpt setters to match convention

* Fixing setter name

* Add KPT setters for jwks transformer interval.

* setters definition of interval

* restore unnecessary change

* Adding support for anthoscli-beta

* Updating beta configs

* Adding gateway

* Adding missing file

* Switching default image to official release, adding support for SA-key-less galley

* Moving neg controller, removing gateway CR

Co-authored-by: Yangmin Zhu <ymzhu@google.com>
Co-authored-by: Jianfei Hu <jianfeih@google.com>

--- a/asm/trafficdirector/td-galley.yaml
+++ b/asm/trafficdirector/td-galley.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: asm-galley-push
   namespace: istio-system
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   labels:
     app: asm-galley-push
     release: asm-galley-push
@@ -25,9 +27,11 @@ spec:
         sidecar.istio.io/inject: "false"
     spec:
       serviceAccountName: asm-galley-service-account
+      securityContext:
+        fsGroup: 1337
       containers:
       - name: galley
-        image: gcr.io/asm-testing/galley:release-1.5-asm-10 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.images.galley"}
+        image: gcr.io/gke-release/asm/galley:1.5.4-asm.2 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.images.galley"}
         imagePullPolicy: "Always"
         ports:
         - containerPort: 9443
@@ -60,9 +64,6 @@ spec:
         - --sinkMeta=project_id=$(PROJECT_ID),sds_path=$(SDSPATH),trace=0,enable_security_beta=false # {"$ref":"#/definitions/io.k8s.cli.substitutions.sink-meta"}
         - --excludedResourceKinds=Pod,Node,Endpoints
         - --enableServiceDiscovery
-        env:
-        - name: ENABLE_JWKS_TRANSFORMER
-          value: "true"
         volumeMounts:
         - name: config
           mountPath: /etc/config
@@ -70,12 +71,17 @@ spec:
         - name: mesh-config
           mountPath: /etc/mesh-config
           readOnly: true
-        - mountPath: /var/secrets/google
-          name: google-cloud-key
+        - mountPath: /var/run/secrets/tokens
+          name: istio-token
       volumes:
-      - name: google-cloud-key
-        secret:
-          secretName: google-cloud-key
+      - name: istio-token
+        projected:
+          defaultMode: 77
+          sources:
+          - serviceAccountToken:
+              audience: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
+              expirationSeconds: 43200
+              path: istio-token
       - name: config
         # Should be created at cluster creation time, include info about the cluster and vendor-specific options.
         configMap:
