--- a/asm/trafficdirector/td-istiod-asm.yaml
+++ b/asm/trafficdirector/td-istiod-asm.yaml
@@ -3,6 +3,8 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: asm-td
   namespace: istio-system
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   labels:
     release: asm-td
 spec:
@@ -23,6 +25,8 @@ kind: PodDisruptionBudget
 metadata:
   name: asm-td
   namespace: istio-system
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   labels:
     release: asm-td
 spec:
@@ -37,6 +41,8 @@ kind: Service
 metadata:
   name: asm-td
   namespace: istio-system
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   labels:
     release: asm-td
 spec:
@@ -62,6 +68,8 @@ kind: Deployment
 metadata:
   name: asm-td
   namespace: istio-system
+  annotations:
+    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   labels:
     app: asm-td
     release: asm-td
@@ -84,7 +92,7 @@ spec:
       serviceAccountName: asm-td-service-account
       containers:
       - name: discovery
-        image: gcr.io/asm-testing/pilot:release-1.5-asm-10 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.images.istiod"}
+        image: gcr.io/gke-release/asm/pilot:1.5.4-asm.2 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.images.istiod"}
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -130,7 +138,7 @@ spec:
         - name: PILOT_EXTERNAL_GALLEY
           value: "false"
         - name: PROXY_IMAGE
-          value: gcr.io/asm-testing/proxyv2:release-1.5-asm-10 # { "$ref": "#/definitions/io.k8s.cli.setters.anthos.servicemesh.images.proxy" }
+          value: gcr.io/gke-release/asm/proxyv2:1.5.4-asm.2 # { "$ref": "#/definitions/io.k8s.cli.setters.anthos.servicemesh.images.proxy" }
         resources:
           requests:
             cpu: 101m
