--- a/cluster/cluster/cluster.yaml
+++ b/cluster/cluster/cluster.yaml
@@ -1,26 +1,21 @@
-apiVersion: identity.cnrm.cloud.google.com/v1alpha2
-kind: IdentityNamespace
-metadata:
-  name: default
-  namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
-spec: {}
 ---
-apiVersion: container.cnrm.cloud.google.com/v1alpha2
+apiVersion: container.cnrm.cloud.google.com/v1beta1
 kind: ContainerCluster
 metadata:
-  clusterName: "[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.full-cluster-name"}
+  annotations:
+    gke.io/cluster: "bootstrap://"
   name: asm-free-trial # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster"}
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
   location: us-central1-c # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.compute.location"}
-  workloadIdentity:
-    identityNamespace: default
+  workloadIdentityConfig:
+    identityNamespace: "[PROJECT_ID].svc.id.goog" # {"$ref":"#/definitions/io.k8s.cli.substitutions.trust-domain"}
   labels:
     mesh_id: "proj-[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.substitutions.mesh-id"}
   loggingService: logging.googleapis.com/kubernetes
   monitoringService: monitoring.googleapis.com/kubernetes
-  ipAllocationPolicy:
-    useIpAliases: true
+  # ipAllocationPolicy:
+  #   useIpAliases: true
   addonsConfig:
     horizontalPodAutoscaling:
       disabled: false
@@ -28,20 +23,19 @@ spec:
       disabled: true
     cloudrunConfig:
       disabled: true # {"$ref":"#/definitions/io.k8s.cli.setters.cloudrun-config-disabled"}
-  masterAuth:
-    username: admin
   network: default
   networkPolicy:
     enabled: true
-  minMasterVersion: "1.15.11-gke.1"
+  minMasterVersion: "1.15.11-gke.13"
   nodeConfig:
     metadata:
       disable-legacy-endpoints: "true"
 ---
-apiVersion: container.cnrm.cloud.google.com/v1alpha2
+apiVersion: container.cnrm.cloud.google.com/v1beta1
 kind: ContainerNodePool
 metadata:
-  clusterName: "[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.full-cluster-name"}
+  annotations:
+    gke.io/cluster: "bootstrap://"
   name: default-pool
   namespace: "[PROJECT_ID]" # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
 spec:
