--- a/project/project/td-galley-sa.yaml
+++ b/project/project/td-galley-sa.yaml
@@ -1,29 +1,15 @@
 ---
-apiVersion: iam.cnrm.cloud.google.com/v1alpha1
-kind: IAMServiceAccount
-metadata:
-  name: asm-galley-service-account
-  namespace: "[PROJECT_ID]"  # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
-  annotations:
-    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
-spec:
-  displayName: Istio galley credentials
-  projectRoles:
-  - roles/meshconfig.writer
----
-apiVersion: iam.cnrm.cloud.google.com/v1alpha1
-kind: IAMPolicy
+apiVersion: iam.cnrm.cloud.google.com/v1beta1
+kind: IAMPolicyMember
 metadata:
   name: asm-galley-iam-policy
   namespace: "[PROJECT_ID]"  # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.core.project"}
   annotations:
-    gke.io/cluster: "gke://[PROJECT_ID]/us-central1-c/asm-free-trial" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
+    gke.io/cluster: "bootstrap://" 
 spec:
- resourceRef:
-   apiVersion: iam.cnrm.cloud.google.com/v1alpha1
-   kind: IAMServiceAccount
-   name: asm-galley-service-account
- bindings:
- - role: roles/iam.workloadIdentityUser
-   members:
-   - serviceAccount:[PROJECT_ID].svc.id.goog[istio-system/asm-push-service-account] # {"$ref":"#/definitions/io.k8s.cli.substitutions.galley-service-account"}
+  member: serviceAccount:[PROJECT_ID].svc.id.goog[istio-system/asm-galley-service-account] # {"$ref":"#/definitions/io.k8s.cli.substitutions.galley-service-account"}
+  role: roles/meshconfig.writer 
+  resourceRef:
+    apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
+    kind: Project
+    external: PROJECT_ID # {"$ref":"#/definitions/io.k8s.cli.substitutions.iam-policy-member-project"}
