--- a/asm/trafficdirector/td-configmap-mesh.yaml
+++ b/asm/trafficdirector/td-configmap-mesh.yaml
@@ -78,7 +78,7 @@ data:
     dnsRefreshRate:                    5s
     protocolDetectionTimeout:          100ms
 
-    enableAutoMtls: false
+    enableAutoMtls: true
 
     # Extra
     authPolicy: NONE
