--- a/asm/trafficdirector/td-istiod-asm-rbac.yaml
+++ b/asm/trafficdirector/td-istiod-asm-rbac.yaml
@@ -67,6 +67,13 @@ rules:
   resources: ["ingresses/status"]
   verbs: ["*"]
 
+- apiGroups: ["networking.k8s.io"]
+  resources: ["ingresses"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: ["networking.k8s.io"]
+  resources: ["ingresses/status"]
+  verbs: ["*"]
+
 # required for CA's namespace controller
 - apiGroups: [""]
   resources: ["configmaps"]
