--- a/cluster/cluster/cluster.yaml
+++ b/cluster/cluster/cluster.yaml
@@ -18,7 +18,7 @@ spec:
     horizontalPodAutoscaling:
       disabled: false
     httpLoadBalancing:
-      disabled: true # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster.addon.disableHttpLoadBalancing"}
+      disabled: false # {"$ref":"#/definitions/io.k8s.cli.setters.gcloud.container.cluster.addon.disableHttpLoadBalancing"}
     cloudrunConfig:
       disabled: true # {"$ref":"#/definitions/io.k8s.cli.setters.cloudrun-config-disabled"}
   network: default
