Adding network to sinkMeta

--- a/asm/trafficdirector/td-galley.yaml
+++ b/asm/trafficdirector/td-galley.yaml
@@ -61,7 +61,7 @@ spec:
         - --validation-port=9443
         - --sinkAuthMode=$(SINKAUTHMODE)
         - --sinkAddress=$(SINKADDRESS)
-        - --sinkMeta=project_id=$(PROJECT_ID),sds_path=$(SDSPATH),trace=0,enable_security_beta=false # {"$ref":"#/definitions/io.k8s.cli.substitutions.sink-meta"}
+        - --sinkMeta=project_id=$(PROJECT_ID),network=projects/$(PROJECT_ID)/global/networks/default,sds_path=$(SDSPATH),trace=0,enable_security_beta=true # {"$ref":"#/definitions/io.k8s.cli.substitutions.sink-meta"}
         - --excludedResourceKinds=Pod,Node,Endpoints
         - --enableServiceDiscovery
         volumeMounts:
